<resources>

    <string name="app_name">Fly With Me!</string>
    <string name="geodesic_distance">Geodesic distance</string>
    <string name="asl">ASL</string>
    <string name="height">Height</string>

    <!-- Preferences -->
    <string name="preferences">Preferences</string>

    <string-array name="empty_list"></string-array>

    <!-- How many takeoffs to show -->
    <string name="show_takeoffs">Show takeoffs</string>
    <string name="takeoffs_max_distance_values_default_value">200</string>

    <string-array name="takeoffs_max_distance_keys">
        <item>Nearest 50 (fast)</item>
        <item>Nearest 100</item>
        <item>Nearest 200</item>
        <item>Nearest 500</item>
        <item>Nearest 1500 (slow)</item>
        <item>Within 50km (fast)</item>
        <item>Within 100km</item>
        <item>Within 200km</item>
        <item>Within 500km</item>
        <item>Within 1500km (slow)</item>
        <item>All (very slow)</item>
    </string-array>
    <string-array name="takeoffs_max_distance_values">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1500</item>
        <item>-50</item>
        <item>-100</item>
        <item>-200</item>
        <item>-500</item>
        <item>-1500</item>
        <item>0</item>
    </string-array>

    <!-- How far away we should draw airspace -->
    <string name="show_airspace">Show airspace</string>
    <string name="airspace_max_distance_values_default_value">-100</string>

    <string-array name="airspace_max_distance_keys">
        <item>Within 50km (fast)</item>
        <item>Within 100km</item>
        <item>Within 200km</item>
        <item>Within 500km</item>
        <item>Within 1500km (slow)</item>
        <item>All (very slow)</item>
    </string-array>
    <string-array name="airspace_max_distance_values">
        <item>-50</item>
        <item>-100</item>
        <item>-200</item>
        <item>-500</item>
        <item>-1500</item>
        <item>0</item>
    </string-array>

    <!-- What airspace to draw (this is mostly set programatically) -->
    <string name="show_airspace_types">Show airspace types</string>

</resources>